feat: 更新日期格式并添加中文语言文件

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -13,8 +13,8 @@
             <p><%- __('author') %>：<a href="<%- config.url %>"><%- config.author %></a>
             <%_ } _%>
             <p><%- __('post_link') %>：<a href="<%- page.permalink %>"><%- page.permalink %></a>
-            <p><%- __('publish_date') %>：<a href="<%- page.permalink %>"><%- (page.date).format('MMMM Do YYYY, h:mm:ss a') %></a>
-            <p><%- __('update_date') %>：<a href="<%- page.permalink %>"><%- (page.updated).format('MMMM Do YYYY, h:mm:ss a') %></a>
+            <p><%- __('post.date') %><%- (page.date).format('YYYY年MM月DD日 HH:mm:ss') %></a>
+            <p><%- __('post.last_modify') %><%- (page.updated).format('YYYY年MM月DD日 HH:mm:ss') %></a>
             <p><%- __('license') %>：<%- theme.copyright.license %></p>
         </div>
     <%_ } _%>
