--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,7 +11,7 @@
 // ========== DIY ========== //
 $feature-color: #f75357;
 $feature-color-dark: #f75357; // Feature color in dark mode
-$code-theme: 'atom-one-dark'; // atom-one-dark or atom-one-light
+$code-theme: 'atom-one-light'; // atom-one-dark or atom-one-light
 
 // ========== global variables ========== //
 $body-background-color: #fff;
